EB-2004-05-11-0: Bugfix:    Changed msg id

JG-2004-05-11-0: Bugfix:    If the CULL definition of an object was extended by
                            additional attributes without changing the spooled 
                            fields, the object was unspooled incorrectly by a 
                            newly built qmaster.
                 Bugfix:    qacct failed if jobs were started with a very long 
                            job name.
                 Review:    SG

CR-2004-05-11-1: Bugfix:    o removed ignored parameters from prepare_enroll()
                            o execd now appends it's pid to temporary startup
                              file name ( /tmp/execd_messages.PID) 
                            o execd will now exit after a timeout when binding 
                              SGE_EXECD_PORT fails 
                            o communication lib errors are now L10N enabled 
                 Changed:   commlib gdilib
                 Issue:     1023, 767
                 Review:    JG

CR-2004-05-11-0: Bugfix:    sge_gdi_setup() with NULL as alpp can cause
                            sgementation fault.
                 Review:    AA

EB-2004-05-10-1: Bugfix:    requestable=forced is ignored for built-in 
                            complex(5) attributes
                 Changed:   sge_schedd
                 Issue:     936
                 Review:    AH, SG

DT-2004-05-10-0: Enhancem.: o Began work on DRMAA howto, including example
                              programs
                            o Cleaned up qsub
                 Changed:   howto, JAPI, qsub

AD-2004-05-10-0: Cleanup:   - First part of 'Master_Config_List' encapsulation.
                            - 'lWriteElem_' and 'lWriteList_' now use 'stderr'
                              is no 'FILE*' argument is given.
                 Changed:   qmaster, cull, sgeobj, exced
                 Review:    SG
